Added VM Options